src/tests/snapshots/hebi__tests__precedence__mutl_first_rhs.snap
---
source: src/tests/precedence.rs
expression: snapshot
---
# Modules:


# Input:
1 + 2 * 3

# Result (success):
7

# Stdout:


